k8s/teslo-shop/templates/ingress/pg-admin.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pg-admin-ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: pg-admin-service
              port:
                number: 80
