k8s/teslo-shop/templates/ingress/teslo-shop.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslo-shop-ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: teslo-shop-service
              port:
                number: 3000
